--- a/week01/박중혁/학습정리.md
+++ b/week01/박중혁/학습정리.md
@@ -1,3 +1,6 @@
+# 1주차 pr
+
+```jsx
 name = "중혁";
 age = 21;
 
@@ -6,7 +9,6 @@ console.log(age);
 //이렇게 하면 변수가 유일하다는 가정이 필요하기 때문에 let(변할 수 있는 상수)이랑 const(절대로 바뀌지 않는 상수)를 사용해줌
 
 let name = "중혁";
-
 
 //+(더하기) -(빼기) *(곱하기) /(나누기) %(나머지)
 //연속 사용시 거듭 취급
@@ -22,11 +24,9 @@ let result = num++;
 
 console.log(result);
 
-
 console.log(10>5);
 console.log(10 == 5);
 console.log(10 != 5);
-
 
 if(age>19){
   console.log('환영합니다.');
@@ -38,7 +38,6 @@ if(age<=19){
 else{console.log('안녕히 가세요.');
 
 }
-
 
 //첫번째 문제
 let N = 5; 
@@ -61,3 +60,4 @@ for (let i = 1; i <= N; i++) {
 }
 
 //두번째 문제는 못풀겠어요 ㅠㅠㅠ
+```
