--- a/week01/박중혁/학습정리.md
+++ b/week01/박중혁/학습정리.md
@@ -55,7 +55,37 @@ for (let i = 1; i <= N; i++) {
         stars = stars + '*';
     }
 
-  
+자바스크립트에서 변수란 값을 저장하는 공간으로 정리할 수 있다.
+나중에 값을 꺼내 쓸때 사용함.
+let과 const로 2가지 방법이 있는데 let은 값이 바뀔수 있는 변수, const는 바뀌지 않는 상수를 지정할 때 사용한다.
+let name = "중혁";  // let써서 재선언은 에러떠서 안되지만 선언한 값의 업데이트는 가능하다
+const age = 21;     // 업데이트 불가능
+
+console.log(name);
+console.log(age);
+
+연산자는 값을 계산하거나 비교할 떄 사용하며 일반적으로 사용하는 사칙연산 기호와 유사하다
+let num = 10;
+num += 5;   
+console.log(num);
+
+조건문은 어떤 조건이 맞는지에 따라 다른 코드를 실행한다.
+주로 if, else if, else를 사용한다
+if 
+else if
+
+let age = 21;
+
+if(age > 19) {
+  console.log('환영합니다.');
+  age = 18;
+} else {
+  console.log('안녕히 가세요.');
+}
+
+반복문은 같은 코드를 여러 번 반복해서 실행할 때 사용한다.
+for문을 사용해서 실행한다.
+	for (let i = 0; i < 5; i++) {
     console.log(spaces + stars);
 }
 
