수정합니다

--- a/week02/정가인/학습정리.md
+++ b/week02/정가인/학습정리.md
@@ -44,7 +44,7 @@ let duouled = number.map(num => num\*2); #map 활용 ,[2,4,6,8,10]
 - 배열처럼 순회 가능
 - 유일한 값만 저장됨
 
-<예시>\_객체
+<예시> 객체
 const user = {
 name: "가인",
 age: 22
@@ -53,14 +53,14 @@ console.log(user.name); #"가인"
 console.log(user["age"]); #22
 user.major = "경영학과"; #속성 추가
 
-<예시>\_ Map
+<예시> Map
 const info = new Map();
 info.set("name", "가인");
 info.set("age", 22);
 console.log(info.get("name")); # "가인"
 console.log(info.has("age")); # true
 
-<예시>\_ Map
+<예시> set
 const mySet = new Set();
 mySet.add("apple");
 mySet.add("peach");
