[5주차] 정가인 학습 PR 제출합니다. (수정본)

--- a/week05/정가인/학습정리.md
+++ b/week05/정가인/학습정리.md
@@ -62,46 +62,105 @@ JS로 HTML과 DOM 제작하기
   // 선택자는 querySelector 하나로 거의 다 처리 가능
 
 **3. 직접 자바스크립트로 계산기를 만들어본다.**
-  계산기_HTML로 뼈대
-  <div class="calculator">
-  <input type="text" id="display" disabled>
+**계산기.HTML**
+  <!DOCTYPE html>
+<html lang="kr">
+  <head>
+    <meta charset="UTF-8" />
+    <title>계산기_정가인</title>
+    <link rel="stylesheet" href="스타일.css" />
+  </head>
+  <body>
+    <script src="계산.js"></script>
+    <h1>계산기</h1>
+    <div class="calculator">
+      <input type="text" id="display" disabled />
+      <div class="buttons">
+        <button onclick="appendValue('1')">1</button>
+        <button onclick="appendValue('2')">2</button>
+        <button onclick="appendValue('3')">3</button>
+        <button onclick="appendValue('4')">4</button>
+        <button onclick="appendValue('5')">5</button>
+        <button onclick="appendValue('6')">6</button>
+        <button onclick="appendValue('7')">7</button>
+        <button onclick="appendValue('8')">8</button>
+        <button onclick="appendValue('9')">9</button>
+        <button onclick="appendValue('0')">0</button>
 
-  <div class="buttons">
-    <button onclick="appendValue('1')">1</button>
-    <button onclick="appendValue('2')">2</button>
-    <button onclick="appendValue('3')">3</button>
-    <button onclick="appendValue('4')">4</button>
-    <button onclick="appendValue('5')">5</button>
-    <button onclick="appendValue('6')">6</button>
-    <button onclick="appendValue('7')">7</button>
-    <button onclick="appendValue('8')">8</button>
-    <button onclick="appendValue('9')">9</button>
-    <button onclick="appendValue('0')">0</button>
+        <button onclick="clearDisplay()">C</button>
+        <button onclick="calculate()">=</button>
+        <button onclick="appendValue('+')">+</button>
+        <button onclick="appendValue('-')">-</button>
+        <button onclick="appendValue('*')">×</button>
+        <button onclick="appendValue('/')">÷</button>
+      </div>
+    </div>
+  </body>
+</html>
 
-    <button onclick="clearDisplay()">C</button>
-    <button onclick="calculate()">=</button>
-    <button onclick="appendValue('+')">+</button>
-    <button onclick="appendValue('-')">-</button>
-    <button onclick="appendValue('*')">×</button>
-    <button onclick="appendValue('/')">÷</button>
-  </div>
-</div>
+**계산.JS**
+window.onload = function () {
+  let display = document.getElementById('display');
 
-  계산기_JS
-  let display = document.getElementById("display");
+  window.appendValue = function (value) {
+    display.value += value;
+  };
 
-  function appendValue(value) {
-  display.value += value; // 버튼의 값을 현재 화면에 추가
+  window.clearDisplay = function () {
+    display.value = '';
+  };
+
+  window.calculate = function () {
+    try {
+      display.value = eval(display.value);
+    } catch {
+      display.value = '오류';
+    }
+  };
+};
+
+**스타일.CSS**
+body {
+  font-family: Arial, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  background: #bef0ff;
+  flex-direction: column;
 }
 
-  function clearDisplay() {
-  display.value = ""; // 화면 지우기
+.calculator {
+  width: 240px;
+  background: white;
+  padding: 20px;
+  border-radius: 15px;
 }
 
-  function calculate() {
-  try {
-    display.value = eval(display.value); 
-  } catch {
-    display.value = "오류"; 
-  }
+#display {
+  width: 95%;
+  height: 50px;
+  font-size: 20px;
+  margin-bottom: 15px;
+  text-align: right;
+  padding: 5px;
+  border-radius: 10px;
+  border: 1px solid white;
 }
+
+.buttons {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+}
+
+button {
+  padding: 15px;
+  font-size: 18px;
+  border-radius: 8px;
+  background: gray;
+  color: white;
+  transition: background 0.3s;
+}
+
